# Cloud-Music-Player-Win

./: Background.qml  CMakeLists.txt  CMakeLists.txt.user.d9e7549  DetailFavoritePageView.qml  DetailHistoryPageView.qml  DetailLocalPageView.qml  DetailPlayListPageView.qml  DetailRecommendPageView.qml  DetailSearchPageView.qml  LayoutBottomView.qml  LayoutTopView.qml  LoadingView.qml  Main.qml  MainSystemTrayIcon.qml  MusicBannerView.qml  MusicBorderImage.qml  MusicGridHotView.qml  MusicGridLatestView.qml  MusicIconButton.qml  MusicListView.qml  MusicLyricView.qml  MusicMvView.qml  MusicRoundImage.qml  MusicTextButton.qml  MusicToolButton.qml  MusicToolTip.qml  PageDetailView.qml  PageHomeView.qml  README.txt  httprequest.cpp  httprequest.h  logo.rc  main.cpp  mysubthread.cpp  mysubthread.h  requestNetwork.js  resources.qrc
